/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.0.0/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Usa o Maven Central para resolver dependências.
    mavenCentral()
}

dependencies {
    // Usa JUnit Jupiter para testes.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Esta dependência é usada pela aplicação.
    implementation libs.guava
    
    // Dependências do JavaFX para Windows
    implementation "org.openjfx:javafx-base:21:win"
    implementation "org.openjfx:javafx-controls:21:win"
    implementation "org.openjfx:javafx-fxml:21:win"
    implementation "org.openjfx:javafx-graphics:21:win"
}

// Aplica uma toolchain Java específica para facilitar o trabalho em diferentes ambientes.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define a classe principal para a aplicação.
    mainClass = 'projetofinal.game.Main'
}

tasks.named('test') {
    // Usa JUnit Platform para testes unitários.
    useJUnitPlatform()
}

run {
    doFirst {
        jvmArgs = ['--module-path', classpath.asPath,
                   '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics,javafx.base']
    }
}


